--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
         "requirejs": "~2.1.9"
     },
     "devDependencies": {
+        "jquery": "^2.1.4",
         "angular-route": "^1.3.0",
         "angular-animate": "^1.3.0",
         "angular-mocks": "^1.3.0",
